# sugatan_hyros

./: .gitignore  Pipfile  broadcast.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
configs/: AdAttribution.json
controller/: bigquery.py  hyros.py  pipelines.py  tasks.py
libs/: bigquery.py  hyros.py
templates/: get_facebook_ids.sql.j2  get_google_ids.sql.j2
test/: test_auto.py  test_broadcast.py  test_manual.py  test_units.py
